config.json: updated url in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -35,7 +35,7 @@
         "social_links": [
             {
                 "label": "Twitter",
-                "url": "https://twitter.com/mboton",
+                "url": "https://twitter.com/mbotondev",
                 "style": "icon",
                 "icon_class": "twitter",
                 "new_window": true
