config.json: updated url in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -42,7 +42,7 @@
             },
             {
                 "label": "Instagram",
-                "url": "https://www.instagram.com/mboton.nett/?hl=en",
+                "url": "https://www.instagram.com/mboton.nett/",
                 "style": "icon",
                 "icon_class": "instagram",
                 "new_window": true
