--- a/content/data/config.json
+++ b/content/data/config.json
@@ -49,7 +49,7 @@
             },
             {
                 "label": "GitHub",
-                "url": "https://github.com/",
+                "url": "https://github.com/munfidah",
                 "style": "icon",
                 "icon_class": "github",
                 "new_window": true
