config.json: updated no_follow in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -52,7 +52,8 @@
                 "url": "https://github.com/munfidah",
                 "style": "icon",
                 "icon_class": "github",
-                "new_window": true
+                "new_window": true,
+                "no_follow": true
             },
             {
                 "label": "LinkedIn",
