--- a/content/data/config.json
+++ b/content/data/config.json
@@ -53,7 +53,7 @@
                 "style": "icon",
                 "icon_class": "github",
                 "new_window": true,
-                "no_follow": true
+                "no_follow": false
             },
             {
                 "label": "LinkedIn",
