--- a/content/data/config.json
+++ b/content/data/config.json
@@ -64,7 +64,7 @@
             },
             {
                 "label": "DEV",
-                "url": "https://dev.to/",
+                "url": "https://dev.to/munfidah",
                 "style": "icon",
                 "icon_class": "dev",
                 "new_window": true
