--- a/content/data/config.json
+++ b/content/data/config.json
@@ -35,7 +35,7 @@
                 "url": "#",
                 "style": "link",
                 "icon_class": "dev",
-                "new_window": false,
+                "new_window": true,
                 "no_follow": false
             }
         ],
