--- a/content/data/config.json
+++ b/content/data/config.json
@@ -31,7 +31,7 @@
                 "style": "link"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Mboton",
                 "url": "#",
                 "style": "link",
                 "icon_class": "dev",
