--- a/content/data/config.json
+++ b/content/data/config.json
@@ -32,7 +32,7 @@
             },
             {
                 "label": "Mboton",
-                "url": "#",
+                "url": "https://www.mboton.net",
                 "style": "link",
                 "icon_class": "dev",
                 "new_window": true,
